_build/default/kawaparser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On VAR shift to state 1
-- On var_decls shift to state 9
-- On var_decl shift to state 120
-- On program shift to state 140
## Reductions:
-- On MAIN CLASS
--   reduce production var_decls ->

State 1:
## Known stack suffix:
## VAR
## LR(1) items:
var_decl -> VAR . typ IDENT SEMI [ WHILE VAR TRUE THIS RETURN PRINT OPP NOT NEW MAIN LPAR INT IF IDENT FALSE END CLASS ]
## Transitions:
-- On VOID shift to state 2
-- On INT_TYPE shift to state 3
-- On IDENT shift to state 4
-- On BOOL_TYPE shift to state 5
-- On typ shift to state 6
## Reductions:

State 2:
## Known stack suffix:
## VOID
## LR(1) items:
typ -> VOID . [ IDENT ]
## Transitions:
## Reductions:
-- On IDENT
--   reduce production typ -> VOID

State 3:
## Known stack suffix:
## INT_TYPE
## LR(1) items:
typ -> INT_TYPE . [ IDENT ]
## Transitions:
## Reductions:
-- On IDENT
--   reduce production typ -> INT_TYPE

State 4:
## Known stack suffix:
## IDENT
## LR(1) items:
typ -> IDENT . [ IDENT ]
## Transitions:
## Reductions:
-- On IDENT
--   reduce production typ -> IDENT

State 5:
## Known stack suffix:
## BOOL_TYPE
## LR(1) items:
typ -> BOOL_TYPE . [ IDENT ]
## Transitions:
## Reductions:
-- On IDENT
--   reduce production typ -> BOOL_TYPE

State 6:
## Known stack suffix:
## VAR typ
## LR(1) items:
var_decl -> VAR typ . IDENT SEMI [ WHILE VAR TRUE THIS RETURN PRINT OPP NOT NEW MAIN LPAR INT IF IDENT FALSE END CLASS ]
## Transitions:
-- On IDENT shift to state 7
## Reductions:

State 7:
## Known stack suffix:
## VAR typ IDENT
## LR(1) items:
var_decl -> VAR typ IDENT . SEMI [ WHILE VAR TRUE THIS RETURN PRINT OPP NOT NEW MAIN LPAR INT IF IDENT FALSE END CLASS ]
## Transitions:
-- On SEMI shift to state 8
## Reductions:

State 8:
## Known stack suffix:
## VAR typ IDENT SEMI
## LR(1) items:
var_decl -> VAR typ IDENT SEMI . [ WHILE VAR TRUE THIS RETURN PRINT OPP NOT NEW MAIN LPAR INT IF IDENT FALSE END CLASS ]
## Transitions:
## Reductions:
-- On WHILE VAR TRUE THIS RETURN PRINT OPP NOT NEW MAIN LPAR INT IF IDENT FALSE END CLASS
--   reduce production var_decl -> VAR typ IDENT SEMI

State 9:
## Known stack suffix:
## var_decls
## LR(1) items:
program -> var_decls . classes MAIN BEGIN seq END EOF [ # ]
## Transitions:
-- On CLASS shift to state 10
-- On classes shift to state 132
-- On class_def shift to state 138
## Reductions:
-- On MAIN
--   reduce production classes ->

State 10:
## Known stack suffix:
## CLASS
## LR(1) items:
class_def -> CLASS . IDENT BEGIN attr_decls method_defs END [ MAIN CLASS ]
class_def -> CLASS . IDENT EXTENDS IDENT BEGIN attr_decls method_defs END [ MAIN CLASS ]
## Transitions:
-- On IDENT shift to state 11
## Reductions:

State 11:
## Known stack suffix:
## CLASS IDENT
## LR(1) items:
class_def -> CLASS IDENT . BEGIN attr_decls method_defs END [ MAIN CLASS ]
class_def -> CLASS IDENT . EXTENDS IDENT BEGIN attr_decls method_defs END [ MAIN CLASS ]
## Transitions:
-- On EXTENDS shift to state 12
-- On BEGIN shift to state 128
## Reductions:

State 12:
## Known stack suffix:
## CLASS IDENT EXTENDS
## LR(1) items:
class_def -> CLASS IDENT EXTENDS . IDENT BEGIN attr_decls method_defs END [ MAIN CLASS ]
## Transitions:
-- On IDENT shift to state 13
## Reductions:

State 13:
## Known stack suffix:
## CLASS IDENT EXTENDS IDENT
## LR(1) items:
class_def -> CLASS IDENT EXTENDS IDENT . BEGIN attr_decls method_defs END [ MAIN CLASS ]
## Transitions:
-- On BEGIN shift to state 14
## Reductions:

State 14:
## Known stack suffix:
## CLASS IDENT EXTENDS IDENT BEGIN
## LR(1) items:
class_def -> CLASS IDENT EXTENDS IDENT BEGIN . attr_decls method_defs END [ MAIN CLASS ]
## Transitions:
-- On ATTR shift to state 15
-- On attr_decls shift to state 19
-- On attr_decl shift to state 126
## Reductions:
-- On METHOD END
--   reduce production attr_decls ->

State 15:
## Known stack suffix:
## ATTR
## LR(1) items:
attr_decl -> ATTR . typ IDENT SEMI [ METHOD END ATTR ]
## Transitions:
-- On VOID shift to state 2
-- On INT_TYPE shift to state 3
-- On IDENT shift to state 4
-- On BOOL_TYPE shift to state 5
-- On typ shift to state 16
## Reductions:

State 16:
## Known stack suffix:
## ATTR typ
## LR(1) items:
attr_decl -> ATTR typ . IDENT SEMI [ METHOD END ATTR ]
## Transitions:
-- On IDENT shift to state 17
## Reductions:

State 17:
## Known stack suffix:
## ATTR typ IDENT
## LR(1) items:
attr_decl -> ATTR typ IDENT . SEMI [ METHOD END ATTR ]
## Transitions:
-- On SEMI shift to state 18
## Reductions:

State 18:
## Known stack suffix:
## ATTR typ IDENT SEMI
## LR(1) items:
attr_decl -> ATTR typ IDENT SEMI . [ METHOD END ATTR ]
## Transitions:
## Reductions:
-- On METHOD END ATTR
--   reduce production attr_decl -> ATTR typ IDENT SEMI

State 19:
## Known stack suffix:
## CLASS IDENT EXTENDS IDENT BEGIN attr_decls
## LR(1) items:
class_def -> CLASS IDENT EXTENDS IDENT BEGIN attr_decls . method_defs END [ MAIN CLASS ]
## Transitions:
-- On METHOD shift to state 20
-- On method_defs shift to state 122
-- On method_def shift to state 124
## Reductions:
-- On END
--   reduce production method_defs ->

State 20:
## Known stack suffix:
## METHOD
## LR(1) items:
method_def -> METHOD . typ IDENT LPAR params RPAR BEGIN var_decls seq END [ METHOD END ]
## Transitions:
-- On VOID shift to state 2
-- On INT_TYPE shift to state 3
-- On IDENT shift to state 4
-- On BOOL_TYPE shift to state 5
-- On typ shift to state 21
## Reductions:

State 21:
## Known stack suffix:
## METHOD typ
## LR(1) items:
method_def -> METHOD typ . IDENT LPAR params RPAR BEGIN var_decls seq END [ METHOD END ]
## Transitions:
-- On IDENT shift to state 22
## Reductions:

State 22:
## Known stack suffix:
## METHOD typ IDENT
## LR(1) items:
method_def -> METHOD typ IDENT . LPAR params RPAR BEGIN var_decls seq END [ METHOD END ]
## Transitions:
-- On LPAR shift to state 23
## Reductions:

State 23:
## Known stack suffix:
## METHOD typ IDENT LPAR
## LR(1) items:
method_def -> METHOD typ IDENT LPAR . params RPAR BEGIN var_decls seq END [ METHOD END ]
## Transitions:
-- On VOID shift to state 2
-- On INT_TYPE shift to state 3
-- On IDENT shift to state 4
-- On BOOL_TYPE shift to state 5
-- On typ shift to state 24
-- On params shift to state 28
## Reductions:
-- On RPAR
--   reduce production params ->

State 24:
## Known stack suffix:
## typ
## LR(1) items:
params -> typ . IDENT [ RPAR ]
params -> typ . IDENT COMMA params [ RPAR ]
## Transitions:
-- On IDENT shift to state 25
## Reductions:

State 25:
## Known stack suffix:
## typ IDENT
## LR(1) items:
params -> typ IDENT . [ RPAR ]
params -> typ IDENT . COMMA params [ RPAR ]
## Transitions:
-- On COMMA shift to state 26
## Reductions:
-- On RPAR
--   reduce production params -> typ IDENT

State 26:
## Known stack suffix:
## typ IDENT COMMA
## LR(1) items:
params -> typ IDENT COMMA . params [ RPAR ]
## Transitions:
-- On VOID shift to state 2
-- On INT_TYPE shift to state 3
-- On IDENT shift to state 4
-- On BOOL_TYPE shift to state 5
-- On typ shift to state 24
-- On params shift to state 27
## Reductions:
-- On RPAR
--   reduce production params ->

State 27:
## Known stack suffix:
## typ IDENT COMMA params
## LR(1) items:
params -> typ IDENT COMMA params . [ RPAR ]
## Transitions:
## Reductions:
-- On RPAR
--   reduce production params -> typ IDENT COMMA params

State 28:
## Known stack suffix:
## METHOD typ IDENT LPAR params
## LR(1) items:
method_def -> METHOD typ IDENT LPAR params . RPAR BEGIN var_decls seq END [ METHOD END ]
## Transitions:
-- On RPAR shift to state 29
## Reductions:

State 29:
## Known stack suffix:
## METHOD typ IDENT LPAR params RPAR
## LR(1) items:
method_def -> METHOD typ IDENT LPAR params RPAR . BEGIN var_decls seq END [ METHOD END ]
## Transitions:
-- On BEGIN shift to state 30
## Reductions:

State 30:
## Known stack suffix:
## METHOD typ IDENT LPAR params RPAR BEGIN
## LR(1) items:
method_def -> METHOD typ IDENT LPAR params RPAR BEGIN . var_decls seq END [ METHOD END ]
## Transitions:
-- On VAR shift to state 1
-- On var_decls shift to state 31
-- On var_decl shift to state 120
## Reductions:
-- On WHILE TRUE THIS RETURN PRINT OPP NOT NEW LPAR INT IF IDENT FALSE END
--   reduce production var_decls ->

State 31:
## Known stack suffix:
## METHOD typ IDENT LPAR params RPAR BEGIN var_decls
## LR(1) items:
method_def -> METHOD typ IDENT LPAR params RPAR BEGIN var_decls . seq END [ METHOD END ]
## Transitions:
-- On WHILE shift to state 32
-- On TRUE shift to state 34
-- On THIS shift to state 35
-- On RETURN shift to state 89
-- On PRINT shift to state 92
-- On OPP shift to state 36
-- On NOT shift to state 37
-- On NEW shift to state 38
-- On LPAR shift to state 41
-- On INT shift to state 42
-- On IF shift to state 97
-- On IDENT shift to state 43
-- On FALSE shift to state 44
-- On seq shift to state 118
-- On mem shift to state 108
-- On instruction shift to state 112
-- On expression shift to state 114
## Reductions:
-- On END
--   reduce production seq ->

State 32:
## Known stack suffix:
## WHILE
## LR(1) items:
instruction -> WHILE . LPAR expression RPAR BEGIN seq END [ WHILE TRUE THIS RETURN PRINT OPP NOT NEW LPAR INT IF IDENT FALSE END ]
## Transitions:
-- On LPAR shift to state 33
## Reductions:

State 33:
## Known stack suffix:
## WHILE LPAR
## LR(1) items:
instruction -> WHILE LPAR . expression RPAR BEGIN seq END [ WHILE TRUE THIS RETURN PRINT OPP NOT NEW LPAR INT IF IDENT FALSE END ]
## Transitions:
-- On TRUE shift to state 34
-- On THIS shift to state 35
-- On OPP shift to state 36
-- On NOT shift to state 37
-- On NEW shift to state 38
-- On LPAR shift to state 41
-- On INT shift to state 42
-- On IDENT shift to state 43
-- On FALSE shift to state 44
-- On mem shift to state 45
-- On expression shift to state 86
## Reductions:

State 34:
## Known stack suffix:
## TRUE
## LR(1) items:
expression -> TRUE . [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
## Transitions:
## Reductions:
-- On SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND
--   reduce production expression -> TRUE

State 35:
## Known stack suffix:
## THIS
## LR(1) items:
expression -> THIS . [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
## Transitions:
## Reductions:
-- On SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND
--   reduce production expression -> THIS

State 36:
## Known stack suffix:
## OPP
## LR(1) items:
expression -> OPP . expression [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
## Transitions:
-- On TRUE shift to state 34
-- On THIS shift to state 35
-- On OPP shift to state 36
-- On NOT shift to state 37
-- On NEW shift to state 38
-- On LPAR shift to state 41
-- On INT shift to state 42
-- On IDENT shift to state 43
-- On FALSE shift to state 44
-- On mem shift to state 45
-- On expression shift to state 85
## Reductions:

State 37:
## Known stack suffix:
## NOT
## LR(1) items:
expression -> NOT . expression [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
## Transitions:
-- On TRUE shift to state 34
-- On THIS shift to state 35
-- On OPP shift to state 36
-- On NOT shift to state 37
-- On NEW shift to state 38
-- On LPAR shift to state 41
-- On INT shift to state 42
-- On IDENT shift to state 43
-- On FALSE shift to state 44
-- On mem shift to state 45
-- On expression shift to state 84
## Reductions:

State 38:
## Known stack suffix:
## NEW
## LR(1) items:
expression -> NEW . IDENT [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
expression -> NEW . IDENT LPAR exprs RPAR [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
## Transitions:
-- On IDENT shift to state 39
## Reductions:

State 39:
## Known stack suffix:
## NEW IDENT
## LR(1) items:
expression -> NEW IDENT . [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
expression -> NEW IDENT . LPAR exprs RPAR [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
## Transitions:
-- On LPAR shift to state 40
## Reductions:
-- On SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND
--   reduce production expression -> NEW IDENT

State 40:
## Known stack suffix:
## NEW IDENT LPAR
## LR(1) items:
expression -> NEW IDENT LPAR . exprs RPAR [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
## Transitions:
-- On TRUE shift to state 34
-- On THIS shift to state 35
-- On OPP shift to state 36
-- On NOT shift to state 37
-- On NEW shift to state 38
-- On LPAR shift to state 41
-- On INT shift to state 42
-- On IDENT shift to state 43
-- On FALSE shift to state 44
-- On mem shift to state 45
-- On exprs shift to state 82
-- On expression shift to state 55
## Reductions:
-- On RPAR
--   reduce production exprs ->

State 41:
## Known stack suffix:
## LPAR
## LR(1) items:
expression -> LPAR . expression RPAR [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
## Transitions:
-- On TRUE shift to state 34
-- On THIS shift to state 35
-- On OPP shift to state 36
-- On NOT shift to state 37
-- On NEW shift to state 38
-- On LPAR shift to state 41
-- On INT shift to state 42
-- On IDENT shift to state 43
-- On FALSE shift to state 44
-- On mem shift to state 45
-- On expression shift to state 46
## Reductions:

State 42:
## Known stack suffix:
## INT
## LR(1) items:
expression -> INT . [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
## Transitions:
## Reductions:
-- On SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND
--   reduce production expression -> INT

State 43:
## Known stack suffix:
## IDENT
## LR(1) items:
mem -> IDENT . [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA ASSIGN AND ]
## Transitions:
## Reductions:
-- On SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA ASSIGN AND
--   reduce production mem -> IDENT

State 44:
## Known stack suffix:
## FALSE
## LR(1) items:
expression -> FALSE . [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
## Transitions:
## Reductions:
-- On SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND
--   reduce production expression -> FALSE

State 45:
## Known stack suffix:
## mem
## LR(1) items:
expression -> mem . [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
## Transitions:
## Reductions:
-- On SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND
--   reduce production expression -> mem

State 46:
## Known stack suffix:
## LPAR expression
## LR(1) items:
expression -> expression . PLUS expression [ RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV AND ]
expression -> expression . MINUS expression [ RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV AND ]
expression -> expression . MUL expression [ RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV AND ]
expression -> expression . DIV expression [ RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV AND ]
expression -> expression . EQUAL expression [ RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV AND ]
expression -> expression . NEQ expression [ RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV AND ]
expression -> expression . LT expression [ RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV AND ]
expression -> expression . LEQ expression [ RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV AND ]
expression -> expression . AND expression [ RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV AND ]
expression -> expression . OR expression [ RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV AND ]
expression -> expression . GT expression [ RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV AND ]
expression -> expression . GEQ expression [ RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV AND ]
expression -> expression . REM expression [ RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV AND ]
expression -> LPAR expression . RPAR [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
expression -> expression . DOT IDENT LPAR exprs RPAR [ RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV AND ]
mem -> expression . DOT IDENT [ RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV AND ]
## Transitions:
-- On RPAR shift to state 47
-- On REM shift to state 48
-- On PLUS shift to state 56
-- On OR shift to state 62
-- On NEQ shift to state 68
-- On MUL shift to state 58
-- On MINUS shift to state 64
-- On LT shift to state 70
-- On LEQ shift to state 72
-- On GT shift to state 74
-- On GEQ shift to state 76
-- On EQUAL shift to state 78
-- On DOT shift to state 50
-- On DIV shift to state 60
-- On AND shift to state 66
## Reductions:

State 47:
## Known stack suffix:
## LPAR expression RPAR
## LR(1) items:
expression -> LPAR expression RPAR . [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
## Transitions:
## Reductions:
-- On SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND
--   reduce production expression -> LPAR expression RPAR

State 48:
## Known stack suffix:
## expression REM
## LR(1) items:
expression -> expression REM . expression [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
## Transitions:
-- On TRUE shift to state 34
-- On THIS shift to state 35
-- On OPP shift to state 36
-- On NOT shift to state 37
-- On NEW shift to state 38
-- On LPAR shift to state 41
-- On INT shift to state 42
-- On IDENT shift to state 43
-- On FALSE shift to state 44
-- On mem shift to state 45
-- On expression shift to state 49
## Reductions:

State 49:
## Known stack suffix:
## expression REM expression
## LR(1) items:
expression -> expression . PLUS expression [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
expression -> expression . MINUS expression [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
expression -> expression . MUL expression [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
expression -> expression . DIV expression [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
expression -> expression . EQUAL expression [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
expression -> expression . NEQ expression [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
expression -> expression . LT expression [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
expression -> expression . LEQ expression [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
expression -> expression . AND expression [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
expression -> expression . OR expression [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
expression -> expression . GT expression [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
expression -> expression . GEQ expression [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
expression -> expression . REM expression [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
expression -> expression REM expression . [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
expression -> expression . DOT IDENT LPAR exprs RPAR [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
mem -> expression . DOT IDENT [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
## Transitions:
-- On DOT shift to state 50
## Reductions:
-- On SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DIV COMMA AND
--   reduce production expression -> expression REM expression

State 50:
## Known stack suffix:
## expression DOT
## LR(1) items:
expression -> expression DOT . IDENT LPAR exprs RPAR [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
mem -> expression DOT . IDENT [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA ASSIGN AND ]
## Transitions:
-- On IDENT shift to state 51
## Reductions:

State 51:
## Known stack suffix:
## expression DOT IDENT
## LR(1) items:
expression -> expression DOT IDENT . LPAR exprs RPAR [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA AND ]
mem -> expression DOT IDENT . [ SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA ASSIGN AND ]
## Transitions:
-- On LPAR shift to state 52
## Reductions:
-- On SEMI RPAR REM PLUS OR NEQ MUL MINUS LT LEQ GT GEQ EQUAL DOT DIV COMMA ASSIGN AND
--   reduce production mem -> expression DOT IDENT
